# Image-Processing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: CalibHandler.h  Calibration.h  CalibrationBoard.h  Camera.h  File.h  FileHandler.h  Filter.h  Image-Processing.h  ImageProcessing.h  ImageProcessingCodes.h  ImageViewer.h  MediaSource.h  Path.h  Stereo.h  StereoCodes.h  Window.h
samples/: CMakeLists.txt
samples/Calibration/: CMakeLists.txt  sample-calibration-camera.cpp  sample-calibration-read-write.cpp
samples/Calibration/config/: CameraConfig.yaml  calib-board.yml  imgproc-config.yaml
samples/File/: .gitignore  CMakeLists.txt  sample-file-read-write.cpp  sample-filehandler-load.cpp
samples/File-Handler/: CMakeLists.txt  sample-filehandler-addPath.cpp  sample-filehandler-load.cpp
samples/File-Handler/config/: imgproc-config.yaml
samples/Image-Viewer/: CMakeLists.txt  sample-ImageViewer.cpp  sample-UI-stereo.cpp
samples/Image-Viewer/config/: CameraConfig.yaml
samples/Media-Source/: .gitignore  CMakeLists.txt  sample-connect  sample-connect.cpp  sample-getFrame  sample-getFrame.cpp
samples/Stereo/: .gitignore  CMakeLists.txt  sample-stereo-connect.cpp  sample-stereo-getFrame.cpp
samples/Stereo/config/: CameraConfig.yaml
samples/User-Interface/: .gitignore  CMakeLists.txt  sample-UI-addWindow.cpp  sample-UI-camera.cpp  sample-UI-stereo.cpp  sample-showFrame.cpp
samples/connect/config/: CameraConfig.yaml
samples/connect/src/: main.cpp
samples/displayStereoFrame/: displayStereoFrame.cpp  sample-displayStereoFrame.cpp
samples/displayStereoFrame/config/: CameraConfig.yaml
samples/filter/: sample-filter.cpp
samples/filter-bandStop/: sample-filter.cpp
samples/filter-bandStop/config/: VideoSrc.yaml
samples/filter/config/: VideoSrc.yaml
samples/old/connect/: CMakeLists.txt  sample-connect.cpp
samples/old/displayStereoFrame/: CMakeLists.txt
samples/old/filter/: sample-filter.cpp  sample-rangefilter.cpp
samples/old/filter-bandStop/: CMakeLists.txt
samples/old/getFrame/: CMakeLists.txt  sample-getFrame.cpp
samples/old/getFrame/config/: CameraConfig.yaml
samples/old/showFrame/: CMakeLists.txt
samples/old/showFrame/config/: CameraConfig.yaml
src/: CalibHandler.cpp  Calibration.cpp  Camera.cpp  File.cpp  FileAttributes.cpp  FileHandler.cpp  Filter.cpp  ImageViewer.cpp  MediaSource.cpp  Path.cpp  Stereo.cpp  Window.cpp
templates/: CameraConfig.yaml
tools/: .gitignore  CMakeLists.txt
